# Handwritten-Digit-Recognition

./: CMakeLists.txt  README.md  kernel.cu  kernel.h  main.cpp  rai_build.yml
common/: MNISTConfig.cmake
